--- a/style.css
+++ b/style.css
@@ -184,26 +184,29 @@ section {
 }
 .nav-item {
     list-style: none;
-    margin-right: 1rem;
+    padding: 1rem;
+    border-radius: 2rem;
     /* background: pink; */
 }
+
 /* link visited, hover, active*/
 .nav-item a {
     text-decoration: none;
     font-size: 1.25rem;
     text-transform: uppercase;
-    font-weight: bold;
+    font-weight: bolder;
     color: var(--lighterpurple);
-    padding: 1rem 1rem;
-    border-radius: 2rem;
 }
 
 .nav-item a:visited {
     color: var(--lighterpurple);
 }
 
-.nav-item a:hover {
+.nav-item:hover {
     background: var(--brightred);
+}
+
+.nav-item:hover a {
     color: white;
 }
 
@@ -224,13 +227,18 @@ section {
     display: block;
     width: 2rem;
     height: 0.25rem;
-    transition: 0.3s;
+    transition: 0.6s;
+}
+
+.is-active:hover span:nth-child(1),
+.is-active:hover span:nth-child(3) {
+    background-color: white;
 }
 
 /* link, visited, hover, active */
 .hamburger.is-active span:nth-child(1) {
-    transform: translateY(-0.06rem) rotate(-45deg);
-    transform-origin: top right;
+    transform-origin: center;
+    transform: translateY(0.625rem) rotate(-45deg);
 }
 
 .hamburger:hover span:nth-child(2) {
@@ -239,12 +247,13 @@ section {
 }
 
 .hamburger.is-active span:nth-child(2) {
-    visibility: hidden;
+    transform: translateX(2.5rem);
+    opacity: 0%;
 }
 
 .hamburger.is-active span:nth-child(3) {
-    transform: translateY(0.06rem) rotate(45deg);
-    transform-origin: bottom right;
+    transform-origin: center;
+    transform: translateY(-0.625rem) rotate(45deg);
 }
 
 @media (max-width: 480px) {
